[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/outline-pixel7/outline_pixel-7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/AirbaseSettings.gd" type="Script" id=2]
[ext_resource path="res://fonts/outline-pixel7/outline_pixel-7_solid.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Air Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.000690461
anchor_top = -0.00117839
anchor_right = 1.00069
anchor_bottom = 0.998822
color = Color( 0.0862745, 0.0862745, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 218.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Air Settings"
text = "Air Settings"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 300
custom_constants/margin_top = 0
custom_constants/margin_left = 300
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MakeFleets" type="Button" parent="VBoxContainer/MarginContainer/options"]
margin_right = 424.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Make Fleets"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/options"]
margin_top = 40.0
margin_right = 424.0
margin_bottom = 288.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/options/HBoxContainer"]
margin_right = 210.0
margin_bottom = 248.0
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 3
custom_constants/separation = 8
alignment = 1

[node name="Player Airbase" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 210.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Player Airbases"

[node name="Player Scouts" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Player Scout Wings"

[node name="Player Strikes" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 210.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Player Strike Wings"

[node name="Player Bombers" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 210.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Player Bombers"

[node name="E Faction" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 210.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Enemy Faction"

[node name="Enemy Airbases" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 210.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Enemy Airbases"

[node name="Enemy Scout" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 210.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Enemy Scout Wings"

[node name="Enemy Strike" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 210.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Enemy Strike Wings"

[node name="Enemy Bombers" type="RichTextLabel" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 210.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Enemy Bombers"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/options/HBoxContainer"]
margin_left = 214.0
margin_right = 424.0
margin_bottom = 248.0
size_flags_horizontal = 3
alignment = 1

[node name="PAirbase" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_right = 210.0
margin_bottom = 24.0
max_value = 1.0

[node name="PScout" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 28.0
margin_right = 210.0
margin_bottom = 52.0
min_value = 1.0
max_value = 2.0
value = 1.0

[node name="PStrike" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 56.0
margin_right = 210.0
margin_bottom = 80.0
max_value = 3.0

[node name="PBomb" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 84.0
margin_right = 210.0
margin_bottom = 108.0
max_value = 2.0

[node name="E Faction" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 112.0
margin_right = 210.0
margin_bottom = 136.0
max_value = 2.0

[node name="EAirbase" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 140.0
margin_right = 210.0
margin_bottom = 164.0
max_value = 1.0

[node name="EScout" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 210.0
margin_bottom = 192.0
min_value = 1.0
max_value = 2.0
value = 1.0

[node name="EStrike" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 196.0
margin_right = 210.0
margin_bottom = 220.0
max_value = 3.0

[node name="EBomb" type="SpinBox" parent="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2"]
margin_top = 224.0
margin_right = 210.0
margin_bottom = 248.0
max_value = 2.0

[node name="Main Menu" type="Button" parent="VBoxContainer/MarginContainer/options"]
margin_top = 308.0
margin_right = 424.0
margin_bottom = 328.0
text = "Main Menu"
[connection signal="pressed" from="VBoxContainer/MarginContainer/options/MakeFleets" to="." method="_on_MakeFleets_pressed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/PAirbase" to="." method="_on_PAirbase_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/PScout" to="." method="_on_PScout_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/PStrike" to="." method="_on_PStrike_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/PBomb" to="." method="_on_PBomb_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/E Faction" to="." method="_on_E_Faction_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/EAirbase" to="." method="_on_EAirbase_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/EScout" to="." method="_on_EScout_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/EStrike" to="." method="_on_EStrike_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MarginContainer/options/HBoxContainer/VBoxContainer2/EBomb" to="." method="_on_EBomb_value_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/options/Main Menu" to="." method="_on_BackButton_pressed"]
